--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -3,11 +3,12 @@ project(apriltag_ros)
 
 set(CMAKE_CXX_STANDARD 11)
 
+find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(catkin REQUIRED COMPONENTS
     roscpp dynamic_reconfigure message_generation
-    image_transport image_geometry cv_bridge
+    image_transport image_geometry cv_bridge tf2_ros tf2_geometry_msgs
     apriltag_mit apriltag_umich apriltag_msgs
     )
 
@@ -17,7 +18,7 @@ catkin_package(
     INCLUDE_DIRS include
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS roscpp dynamic_reconfigure message_runtime image_transport image_geometry
-    cv_bridge apriltag_mit apriltag_umich apriltag_msgs
+    cv_bridge tf2_ros tf2_geometry_msgs apriltag_mit apriltag_umich apriltag_msgs
     )
 
 include_directories(
@@ -25,6 +26,7 @@ include_directories(
     ${catkin_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS}
+    ${Eigen_INCLUDE_DIRS}
     )
 
 add_library(${PROJECT_NAME} src/apriltag_detector.cpp)
