--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -17,7 +17,7 @@
   <depend>tf2_geometry_msgs</depend>
 
   <depend>apriltag_mit</depend>
-  <depend>apriltag_umich</depend>
+  <depend>apriltag</depend>
   <depend>apriltag_msgs</depend>
 
   <build_depend>message_generation</build_depend>
